# ta11_sensor_tools

./: LICENSE  README.md
controller/: CMakeLists.txt  README.md  package.xml  ta11_controller_plugins.xml
controller/cfg/: TA11ControllerDR.cfg
controller/config/: pal-gripper_ta11_controller.yaml  pal-gripper_ta11_controller_simulation.yaml  ta11.rviz
controller/include/: ta11_controller.h  ta11_controller_impl.h  tactile_sensor.h  tactile_sensor_impl.h
controller/launch/: ta11_controller.launch  ta11_plot.launch  tiago_ta11.launch
controller/msg/: TA11Debug.msg
controller/src/: ta11_controller.cpp
test_gui/: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
test_gui/launch/: ta11_test.launch  ta11_tiago.launch
test_gui/resources/: steel_close.bag  steel_open.bag
test_gui/scripts/: ta11_test  ta11_tiago
test_gui/src/ta11_test/: ta11_test.py  ta11_test.ui
test_gui/src/ta11_tiago/: ta11_tiago.py  ta11_tiago.ui
visualization/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
visualization/scripts/: send_test_msgs.py
visualization/src/: ta11_display.cpp  ta11_display.h
